Update release_dir path

--- a/integration-manifest.json
+++ b/integration-manifest.json
@@ -8,5 +8,5 @@
   "update_catalog": false,
   "description": "This AnyGateway implementation consumes the Entrust CA Gateway API to provide access to the Entrust Certificate Services, Entrust Authority Security Manager, and Entrust Managed PKI product lines.",
   "gateway_framework": "10.x.x",
-  "release_dir": "EntrustCAProxy/bin/Release"
+  "release_dir": "entrust-cagateway-cagateway\\src\\EntrustCAProxy\\bin\\Release"
 }
